--- a/style.css
+++ b/style.css
@@ -2,30 +2,45 @@
     margin: 0;
     padding: 0;
     font-family: 'Poppins',sans-serif;
-    /* text-align: center; */
+    
 }
-
+.search-title {
+    text-align: center;
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+    color: #333;
+}
+.search-subtitle {
+    text-align: center;
+    font-size: 1rem;
+    margin-bottom: 20px;
+    color: #666;
+}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 body{
-    background-color: #222;
+    background-color: #c2b2b2;
+    background-image: url(https://wallpapers.com/images/featured/weather-xqhs9axpy8btfd3y.jpg);
 }
 
 .card{
     width: 90%;
     max-width: 470px;
-    background: linear-gradient(135deg, #00feba,#5b548a);
+    background-color: rgba(255, 235, 205, 0);
     color: #fff;
-    margin: 10px auto 0;
+    margin: 130px auto 0;
     border-radius: 20px;
     padding: 40px 35px;
     text-align: center;
 }
 
-.search{
+.search {
     width: 100%;
+    height: 40vh; 
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 
 .search input{
     outline: 0;
@@ -54,9 +69,12 @@ body{
     width: 16px;
 }
 
-.weather-icon{
-    width: 170px;
-    margin-top: 30px;
+.weather-icon {   
+    width: 100px;
+    position: absolute;
+    top: -60px; 
+    left: 50%;
+    transform: translateX(50%);
 }
 
 .weather h1{
